# RoadSystemMaintance

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fix_build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  requirements.txt.backup
apps/accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/core/management/commands/: wait_for_db.py
apps/issues/: __init__.py  admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/issues/migrations/: 0001_initial.py
apps/media/: admin.py  models.py  urls.py
apps/reports/: admin.py  models.py  serializers.py  urls.py  views.py
road_maintenance/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  dashboard.html  welcome.html
templates/includes/: footer.html  navbar.html
templates/issues/: base.html  form.html  issue_confirm_delete.html  issue_detail.html  issue_list.html  issue_map.html
